# flutter_playground

./: .gitignore  README.md  pubspec.yaml
lib/animations/: frame.dart  section.dart
lib/animations/curves/: curves.dart
lib/box_constraints/: box_constraints.dart
lib/characters/: simple.dart
lib/clock/analog_clock/: analog_clock.dart  container_hand.dart  draw_hand.dart  hand.dart  main.dart
lib/clock/canvas_clock/: customizer.dart  main.dart  model.dart  model.freezed.dart
lib/clock/canvas_clock/composition/: animated.dart  composited.dart  state.dart
lib/clock/canvas_clock/core/: int.dart  num.dart
lib/clock/canvas_clock/customizer/: customizer.dart  manual.dart
lib/clock/canvas_clock/rendering/: composition.dart
lib/clock/canvas_clock/style/: background.dart  palette.dart
lib/clock/common/: common.dart  customizer.dart  model.dart  model.freezed.dart
lib/clock/common/api/: weather_api.dart  weather_api.freezed.dart  weather_api.g.dart
lib/clock/digital_clock/: digital_clock.dart  main.dart
lib/paint_context/: layer.dart  picture.dart
lib/render_box/render_proxy_box_my_opacity/: main.dart  my_opacity.dart
lib/render_box/render_shifted_box_my_center/: my_center.dart
lib/text_render/: main.dart
lib/weather_ffi/: ffi_bridge.dart  main.dart
lib/widgets_play/: CustomMultiChildLayout.dart
native/: CMakeLists.txt
native/cpp/: weather.cc
native/rust/: Cargo.toml
native/rust/src/: lib.rs
test/: widget_test.dart
test/api/: weather_api_test.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt
(+7 files in other folders)
